objects/ssot__AllergyIntolerance__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AllergyIntoleranceCategory__c</fullName>
        <label>Allergy Intolerance Category</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AllergyIntoleranceSeverity__c</fullName>
        <label>Allergy Intolerance Severity</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AllergyIntoleranceType__c</fullName>
        <label>Allergy Intolerance Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AllergyIntoleranceVerificationStatus__c</fullName>
        <label>Allergy Intolerance Verification Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssertionSourceId__c</fullName>
        <label>Assertion Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssertionSourceObject__c</fullName>
        <label>Assertion Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeId__c</fullName>
        <label>Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeSetBundleId__c</fullName>
        <label>[DoNotUse]Code Set Bundle</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Allergy Intolerance Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastOccurrenceDateTime__c</fullName>
        <label>Last Occurrence DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OnsetEndDateTime__c</fullName>
        <label>Onset End DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OnsetStartDateTime__c</fullName>
        <label>Onset Start DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordCreationDateTime__c</fullName>
        <label>Record Creation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RecordObject__c</fullName>
        <label>Recorder Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecorderId__c</fullName>
        <label>Recorder</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifier__c</fullName>
        <label>Source System Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModified__c</fullName>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystem__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721824297_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AllergyIntolerance_RecorderId_map_Ac_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>AllergyIntolerance_RecorderId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1716721824297_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721825601_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AllergyIntolerance_CodeSetBundleId_m_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>AllergyIntolerance_CodeSetBundleId_m_rel</relationshipLabel>
        <relationshipName>rel_1716721825601_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721831040_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AllergyIntolerance_AssertionSourceId_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>AllergyIntolerance_AssertionSourceId_rel</relationshipLabel>
        <relationshipName>rel_1716721831040_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>